Create News portal

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "emmet.showSuggestionsAsSnippets": true,
     "emmet.includeLanguages": {
-        "javascript": "html"}
+        "razor": "html"
+    }
 }
